# advent-of-code

./: .gitignore  CMakeLists.txt  build.sh  common.h  day1.c  day1.h  day2.c  day2.h  day3.c  day3.h  day4.c  day4.h  day5.c  day5.h  main.c
2015/: .gitignore  CMakeLists.txt  main.c
2015/cmake/: PadString.cmake
2015/include/: .gitignore  common.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h
2015/lib/: CMakeLists.txt  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day20.c  day21.c
2015/lib/common/: CMakeLists.txt  alloc.c  array.c  io.c  misc.c
2015/lib/day2/: solver.c
2015/lib/day4/: solver.c
2015/src/day1/: CMakeLists.txt
2015/templates/: day.h.in  libCMakeLists.txt.in
2015/tests/: CMakeLists.txt  test_day01.c  test_day02.c  test_day03.c  test_day04.c  test_day05.c  test_day06.c  test_day07.c  test_day08.c  test_day09.c  test_day1.c  test_day10.c  test_day11.c  test_day12.c  test_day13.c  test_day14.c  test_day15.c  test_day16.c  test_day17.c  test_day18.c  test_day19.c  test_day2.c  test_day20.c  test_day21.c  test_day3.c  test_day5.c  test_day6.c
2016/: common.go  day01.go  day01_test.go  day02.go  day02_test.go  day03.go  day03_test.go  day1.go  day1_test.go  go.mod  main.go
include/: .gitignore  common.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  array.c  io.c  misc.c
lib/day2/: solver.c
lib/day3/: solver.c
lib/day4/: solver.c
lib/day5/: solver.c
lib/day6/: solver.c
lib/day7/: solver.c
lib/day8/: solver.c
templates/: day.h.in
tests/: CMakeLists.txt  test_day4.c  test_day7.c  test_day8.c
