foreach (DAY RANGE 1 17)
    pad_string(PADDED_DAY ${DAY} 2)
    if (${DAY} EQUAL 4)
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(LIBMD REQUIRED IMPORTED_TARGET libmd)
        target_link_libraries(libaoc2015 PRIVATE PkgConfig::LIBMD)
    endif ()
    if (${DAY} EQUAL 12)
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(LIBJQ REQUIRED IMPORTED_TARGET libjq)
        target_link_libraries(libaoc2015 PRIVATE PkgConfig::LIBJQ)
    endif ()
    add_executable(aoc2015day${PADDED_DAY}_test test_day${PADDED_DAY}.c)
    target_link_libraries(aoc2015day${PADDED_DAY}_test libaoc2015)
    target_include_directories(aoc2015day${PADDED_DAY}_test PRIVATE ${CMAKE_SOURCE_DIR}/include)
    add_test(NAME day${PADDED_DAY} COMMAND aoc2015day${PADDED_DAY}_test)
endforeach ()
